--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,365 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: "";
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 
+/* Set every element's box-sizing to border-box */
+html {
+  box-sizing: border-box;
+}
+
+html,
+body {
+  height: 100%;
+  font-family: "Spectral SC", serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Spectral SC", serif;
+  font-weight: bold;
+  font-style: italic;
+  letter-spacing: 1px;
+  margin-bottom: 15px;
+}
+
+/* Your code starts here! */
+
+.container {
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
+header {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  height: 50px;
+  margin: 0 0 1em 0;
+  top: 0px;
+  /* background: pink; */
+  /* position: fixed; */
+}
+
+.nav {
+  display: flex;
+  padding-top: 10px;
+}
+
+.innovation {
+  animation: pulse 5s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    background-color: #01003f;
+  }
+  100% {
+    background-color: #36ffb2;
+  }
+}
+
+.nav a {
+  margin-right: 80px;
+  color: gray;
+  text-decoration: none;
+}
+
+.nav a:last-child {
+  margin-right: 0px;
+}
+
+.logo {
+  margin-left: 40px;
+}
+
+header nav {
+  display: inline-block;
+  margin: 10px;
+  vertical-align: middle;
+}
+
+h1 {
+  font-size: 70px;
+  text-align: center;
+}
+
+.innovation {
+  display: inline-block;
+  text-align: center;
+  vertical-align: top;
+  padding: 60px;
+  /*  background: yellow; */
+}
+
+.main-image {
+  display: inline-block;
+  /* background: pink */
+  vertical-align: top;
+  margin-left: 30px;
+  /* background:pink; */
+}
+
+.intro {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  margin-top: 75px;
+  margin-bottom: 30px;
+}
+
+.upper {
+  display: flex;
+  flex-direction: row;
+}
+
+.features {
+  display: inline-block;
+  /*  background: pink; */
+  vertical-align: top;
+  width: 49%;
+  margin: 30px 0;
+}
+
+.About {
+  display: inline-block;
+  /*  background: gray; */
+  vertical-align: top;
+  width: 49%;
+  margin: 30px 0;
+}
+
+.bottom {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: stretch;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.Services {
+  display: inline-block;
+  /*  background: gray; */
+  width: 32%;
+  margin-right: 1%;
+}
+
+.Product {
+  display: inline-block;
+  /* background: yellow; */
+  width: 32%;
+  margin-right: 1%;
+}
+
+.Vision {
+  display: inline-block;
+  /* background: pink; */
+  width: 32%;
+}
+
+.footer {
+  text-align: center;
+  font-size: 12px;
+}
+
+.upper {
+  flex-wrap: wrap;
+}
+
+.image-bar {
+  display: flex;
+  justify-content: centered;
+  width: 100%;
+}
+
+@media (max-width: 800px) {
+  .container {
+    /* background: gray; */
+    width: 100%;
+    margin: 0 auto;
+  }
+  .main-image {
+    display: none;
+  }
+  header {
+    display: flex;
+    width: 100%;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+  .nav a {
+    margin-right: 30px;
+  }
+}
+
+@media (max-width: 500px) {
+  .container {
+    /* background: pink;  */
+    /* max-width: 800px; */
+    width: 100%;
+    margin: auto 0;
+  }
+  header {
+    display: flex;
+    width: 100%;
+    flex-direction: column-reverse;
+    align-items: center;
+    /* border: 1px solid black; */
+    margin-top: 15px;
+  }
+  header nav {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    flex-wrap: nowrap;
+    text-align: center;
+    /* border: 1px solid black; */
+  }
+  .nav-link {
+    display: inline-block;
+    width: 100%;
+    text-align: center;
+    font-size: 24px;
+    padding: 10px;
+    border: 1px solid black;
+  }
+  .innovation {
+    margin-top: 200px;
+  }
+  .upper,
+  .bottom {
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+  }
+}
