--- a/css/index.css
+++ b/css/index.css
@@ -155,43 +155,52 @@ h5 {
 /* Your code starts here! */
 
 .container {
-  max-width: 1280px;
+  max-width: 1080px;
   margin: 0 auto;
+  wdith: 100%;
+}
+
+@media (max-width: 800px) {
+  .container {
+    background: yellow;
+    width: 100%;
+    margin: 0 auto;
+  }
 }
 
 header {
   display: flex;
   width: 100%;
-  justify-content: space-between;
-  height: 50px;
-  margin: 0 0 1em 0;
-  top: 0px;
-  /* background: pink; */
-  /* position: fixed; */
+  flex-direction: row
+  justify-content: space-around;
+  margin-top: 15px;
+}
+
+@media (max-width: 800px) {
+  header {
+    display: flex;
+    width: 100%;
+    flex-direction: column-reverse;
+    align-items: center;
+    margin-top: 40px;
+  
+  }
 }
 
 .nav {
-  display: flex;
   padding-top: 10px;
 }
 
-.innovation {
-  animation: pulse 5s infinite;
-}
-
-@keyframes pulse {
-  0% {
-    background-color: #01003f;
-  }
-  100% {
-    background-color: #36ffb2;
-  }
-}
-
 .nav a {
-  margin-right: 80px;
+  margin-right: 60px;
   color: gray;
   text-decoration: none;
+}
+
+@media (max-width: 800px) {
+  .nav a {
+    margin-right: 40px;
+  }
 }
 
 .nav a:last-child {
@@ -199,34 +208,31 @@ header {
 }
 
 .logo {
-  margin-left: 40px;
-}
-
-header nav {
-  display: inline-block;
-  margin: 10px;
-  vertical-align: middle;
+  margin-left: 130px;
 }
 
 h1 {
-  font-size: 70px;
+  font-size: 48px;
   text-align: center;
 }
 
 .innovation {
-  display: inline-block;
-  text-align: center;
-  vertical-align: top;
-  padding: 60px;
-  /*  background: yellow; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .main-image {
-  display: inline-block;
-  /* background: pink */
-  vertical-align: top;
-  margin-left: 30px;
-  /* background:pink; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width: 800px) {
+  .main-image {
+    display: none;
+  }
 }
 
 .intro {
@@ -243,19 +249,23 @@ h1 {
 }
 
 .features {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
   /*  background: pink; */
   vertical-align: top;
-  width: 49%;
-  margin: 30px 0;
+  width: 48%;
+  padding: 5px;
+  margin: 20px 0;
 }
 
 .About {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
   /*  background: gray; */
   vertical-align: top;
   width: 49%;
-  margin: 30px 0;
+  padding: 5px;
+  margin: 20px 0;
 }
 
 .bottom {
@@ -268,28 +278,33 @@ h1 {
 }
 
 .Services {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
   /*  background: gray; */
   width: 32%;
   margin-right: 1%;
 }
 
 .Product {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
   /* background: yellow; */
   width: 32%;
   margin-right: 1%;
 }
 
 .Vision {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
   /* background: pink; */
   width: 32%;
 }
 
 .footer {
-  text-align: center;
+  display: flex;
+  justify-content: center;
   font-size: 12px;
+  margin-bottom: 15px;
 }
 
 .upper {
@@ -302,30 +317,9 @@ h1 {
   width: 100%;
 }
 
-@media (max-width: 800px) {
-  .container {
-    /* background: gray; */
-    width: 100%;
-    margin: 0 auto;
-  }
-  .main-image {
-    display: none;
-  }
-  header {
-    display: flex;
-    width: 100%;
-    flex-direction: column-reverse;
-    align-items: center;
-  }
-  .nav a {
-    margin-right: 30px;
-  }
-}
-
 @media (max-width: 500px) {
   .container {
-    /* background: pink;  */
-    /* max-width: 800px; */
+    background: pink;
     width: 100%;
     margin: auto 0;
   }
@@ -333,33 +327,44 @@ h1 {
     display: flex;
     width: 100%;
     flex-direction: column-reverse;
+    justify-content: center;
     align-items: center;
     /* border: 1px solid black; */
-    margin-top: 15px;
   }
   header nav {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 98%;
     flex-wrap: nowrap;
     text-align: center;
+    margin: 0 auto;
     /* border: 1px solid black; */
   }
   .nav-link {
-    display: inline-block;
-    width: 100%;
-    text-align: center;
-    font-size: 24px;
+    display: flex;
+    width: 95%;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
     padding: 10px;
     border: 1px solid black;
   }
   .innovation {
-    margin-top: 200px;
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    margin-top: 30px;
+  }
+  h1 {
+    font-size: 48px;
   }
   .upper,
   .bottom {
+    background: pink;
     display: flex;
+    width: 95%;
     flex-direction: column;
-    align-items: left;
+    justify-content: left;
+    padding: 20px;
   }
 }
