--- a/css/index.css
+++ b/css/index.css
@@ -162,9 +162,17 @@ h5 {
 
 @media (max-width: 800px) {
   .container {
-    background: yellow;
     width: 100%;
     margin: 0 auto;
+    background: yellow;
+  }
+}
+
+@media (max-width: 500px){
+  .container{
+    width: 100%;
+    margin: 0 auto;
+    background: pink;
   }
 }
 
@@ -172,44 +180,75 @@ header {
   display: flex;
   width: 100%;
   flex-direction: row
-  justify-content: space-around;
+  justify-content: space-between;
   margin-top: 15px;
 }
 
 @media (max-width: 800px) {
   header {
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
     flex-direction: column-reverse;
     align-items: center;
-    margin-top: 40px;
-  
+    margin-top: 20px;
   }
 }
+
+
 
 .nav {
   padding-top: 10px;
 }
 
-.nav a {
-  margin-right: 60px;
+@media (max-width: 800px){
+  .nav{
+    display: flex;
+    flex-direction: row;
+    margin-top: 20px;
+  }
+}
+
+@media (max-width: 500px){
+  .nav{
+    width: 100%;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+}
+
+
+nav a {
+  margin-right: 40px;
   color: gray;
   text-decoration: none;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 500px){
   .nav a {
-    margin-right: 40px;
+    display: flex;
+    width: 99%;
+    justify-content: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 18px;
+    border-bottom: 1px solid gray;
+    border-top: 1px solid gray;
+    
   }
 }
 
-.nav a:last-child {
-  margin-right: 0px;
+.logo{
+  margin-left: 140px;
 }
 
-.logo {
-  margin-left: 130px;
+@media (max-width: 800px){
+ .logo{
+   margin: 0 auto;
+ }
 }
+
 
 h1 {
   font-size: 48px;
@@ -229,6 +268,7 @@ h1 {
   align-items: center;
 }
 
+
 @media (max-width: 800px) {
   .main-image {
     display: none;
@@ -245,28 +285,57 @@ h1 {
 
 .upper {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
+}
+
+@media (max-width: 500px){
+  .upper{
+    padding: 10px;
+  }
 }
 
 .features {
   display: flex;
   flex-direction: column;
-  /*  background: pink; */
   vertical-align: top;
   width: 48%;
   padding: 5px;
   margin: 20px 0;
 }
 
+@media (max-width: 500px){
+  .features{
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+  }
+}
+
 .About {
   display: flex;
   flex-direction: column;
-  /*  background: gray; */
   vertical-align: top;
   width: 49%;
   padding: 5px;
   margin: 20px 0;
 }
+
+@media (max-width: 500px){
+  .About{
+    display: flex;
+    width: 100%;
+    align-items: stretch:
+  }
+}
+
+.image-bar {
+  display: flex;
+  justify-content: centered;
+  width: 100%;
+}
+
+
 
 .bottom {
   display: flex;
@@ -277,27 +346,57 @@ h1 {
   margin-bottom: 30px;
 }
 
-.Services {
+@media (max-width: 500px){
+  .bottom{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column-reverse;
+    padding: 10px;
+  }
+}
+
+.services {
   display: flex;
   flex-direction: column;
-  /*  background: gray; */
   width: 32%;
   margin-right: 1%;
 }
 
+@media (max-width: 500px){
+  .services{
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+  }
+}
 .Product {
   display: flex;
   flex-direction: column;
-  /* background: yellow; */
   width: 32%;
   margin-right: 1%;
+}
+
+@media (max-width: 500px){
+  .Product{
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+  }
+
 }
 
 .Vision {
   display: flex;
   flex-direction: column;
-  /* background: pink; */
   width: 32%;
+}
+
+@media (max-width: 500px){
+  .Vision{
+    display: flex;
+    width: 100%;
+    align-items: stretch;
+  }
 }
 
 .footer {
@@ -307,64 +406,10 @@ h1 {
   margin-bottom: 15px;
 }
 
-.upper {
-  flex-wrap: wrap;
-}
-
-.image-bar {
-  display: flex;
-  justify-content: centered;
-  width: 100%;
-}
-
-@media (max-width: 500px) {
-  .container {
-    background: pink;
-    width: 100%;
-    margin: auto 0;
-  }
-  header {
+@media (max-width: 500px){
+  .contact{
     display: flex;
-    width: 100%;
-    flex-direction: column-reverse;
-    justify-content: center;
-    align-items: center;
-    /* border: 1px solid black; */
-  }
-  header nav {
-    display: flex;
-    flex-direction: column;
-    width: 98%;
-    flex-wrap: nowrap;
-    text-align: center;
-    margin: 0 auto;
-    /* border: 1px solid black; */
-  }
-  .nav-link {
-    display: flex;
-    width: 95%;
-    justify-content: center;
-    align-items: center;
-    font-size: 16px;
     padding: 10px;
-    border: 1px solid black;
-  }
-  .innovation {
-    display: flex;
-    flex-direction: column;
-    padding: 30px;
-    margin-top: 30px;
-  }
-  h1 {
-    font-size: 48px;
-  }
-  .upper,
-  .bottom {
-    background: pink;
-    display: flex;
-    width: 95%;
-    flex-direction: column;
-    justify-content: left;
-    padding: 20px;
   }
 }
+
